--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="aaa">
-      <img src="./eisenhower-matrix.jpg">
+      <img src="./eisenhower-matrix.jpg" alt="eisenhower-matrix">
       <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
 
@@ -31,7 +31,7 @@
           <input type="text" class="task">
           <button class="edit">Edit</button>
           <button class="delete">
-            <img src="./remove.svg">
+            <img src="./remove.svg" alt="remove-item">
           </button>
         </li>
         <li class="editMode">
@@ -39,7 +39,7 @@
           <label class="task">Go Shopping</label>
           <input type="text" value="Go Shopping" class="task">
           <button class="edit">Save</button>
-          <button class="delete"><img src="./remove.svg"></button>
+          <button class="delete"><img src="./remove.svg" alt="remove-item"></button>
         </li>
       </ul>
 
@@ -50,11 +50,11 @@
           <label class="task">See the Doctor</label>
           <input type="text" class="task">
           <button class="edit">Edit</button>
-          <button class="delete"><img src="./remove.svg"></button>
+          <button class="delete"><img src="./remove.svg" alt="remove-item"></button>
       </li>
       </ul>
     </div>
-    
+
     <script src="app.js"></script>
   </body>
 </html>
