--- a/index.html
+++ b/index.html
@@ -9,30 +9,29 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body>
-    <div class="aaa">
+    <header class="aaa">
       <img src="./eisenhower-matrix.jpg" alt="eisenhower-matrix">
       <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-    </div>
+    </header>
 
-    <div class="centered-main-page-element">
-      <p id="topSectionForAddingElementToList">
+    <main class="centered-main-page-element">
+
+      <div id="topSectionForAddingElementToList">
         <label for="new-task">Add Item</label>
         <div class="task-row-wrapper">
-          <input id="new-task"class="task" type="text">
+          <input id="new-task" class="task" type="text">
           <button>Add</button>
         </div>
-      </p>
-      <h3>Todo</h3>
+      </div>
 
+      <h3>Todo</h3>
       <ul id="incompleteTasks">
         <li>
           <input type="checkbox">
           <label class="task">Pay Bills</label>
           <input type="text" class="task">
           <button class="edit">Edit</button>
-          <button class="delete">
-            <img src="./remove.svg" alt="remove-item">
-          </button>
+          <button class="delete"><img src="./remove.svg" alt="remove-item"></button>
         </li>
         <li class="editMode">
           <input type="checkbox">
@@ -51,10 +50,10 @@
           <input type="text" class="task">
           <button class="edit">Edit</button>
           <button class="delete"><img src="./remove.svg" alt="remove-item"></button>
-      </li>
+        </li>
       </ul>
-    </div>
 
+    </main>
     <script src="app.js"></script>
   </body>
 </html>
