--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
       <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
 
-    <main class="centered-main-page-element">
+    <main class="main">
 
-      <div id="topSectionForAddingElementToList">
+      <div>
         <label for="new-task">Add Item</label>
         <div class="task-row-wrapper">
           <input id="new-task" class="task" type="text">
