--- a/index.html
+++ b/index.html
@@ -10,46 +10,46 @@
   </head>
   <body>
     <header class="header">
-      <img src="./eisenhower-matrix.jpg" alt="eisenhower-matrix">
-      <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+      <img src="./eisenhower-matrix.jpg" alt="eisenhower-matrix" class="header__img">
+      <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </header>
 
     <main class="main">
 
-      <div>
-        <label for="new-task">Add Item</label>
-        <div class="task-row-wrapper">
-          <input id="new-task" class="task" type="text">
-          <button>Add</button>
+      <div class="add-item">
+        <label for="new-task" class="lbl add-item__new">Add Item</label>
+        <div class="add-item-task-wrapper">
+          <input id="new-task" class="task inputs" type="text">
+          <button class="btn">Add</button>
         </div>
       </div>
 
-      <h3>Todo</h3>
-      <ul id="incompleteTasks">
-        <li>
-          <input type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete"><img src="./remove.svg" alt="remove-item"></button>
+      <h3 class="title">Todo</h3>
+      <ul id="incomplete-tasks" class="tasks-block">
+        <li class="tasks-block__item">
+          <input type="checkbox" class="checkbox inputs">
+          <label class="lbl task">Pay Bills</label>
+          <input type="text" class="task inputs">
+          <button class="edit btn">Edit</button>
+          <button class="delete btn"><img src="./remove.svg" alt="remove-item"></button>
         </li>
-        <li class="editMode">
-          <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
-          <button class="edit">Save</button>
-          <button class="delete"><img src="./remove.svg" alt="remove-item"></button>
+        <li class="tasks-block__item editMode">
+          <input type="checkbox" class="checkbox inputs">
+          <label class="lbl task">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="task inputs">
+          <button class="edit btn">Save</button>
+          <button class="delete btn"><img src="./remove.svg" alt="remove-item"></button>
         </li>
       </ul>
 
-      <h3>Completed</h3>
-      <ul id="completed-tasks">
-        <li>
-          <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete"><img src="./remove.svg" alt="remove-item"></button>
+      <h3 class="title">Completed</h3>
+      <ul id="completed-tasks" class="tasks-block">
+        <li class="tasks-block__item">
+          <input type="checkbox" checked class="checkbox inputs">
+          <label class="lbl task">See the Doctor</label>
+          <input type="text" class="task inputs">
+          <button class="edit btn">Edit</button>
+          <button class="delete btn"><img src="./remove.svg" alt="remove-item"></button>
         </li>
       </ul>
 
