--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
           <input type="checkbox" class="checkbox">
           <label class="lbl task">Pay Bills</label>
           <input type="text" class="task text-inputs">
-          <button class="edit btn">Edit</button>
-          <button class="delete btn"><img src="./remove.svg" alt="remove-item"></button>
+          <button class="btn_edit btn">Edit</button>
+          <button class="btn_delete btn"><img src="./remove.svg" alt="remove-item" class="btn__img_del"></button>
         </li>
         <li class="tasks-block__item editMode">
           <input type="checkbox" class="checkbox">
           <label class="lbl task">Go Shopping</label>
           <input type="text" value="Go Shopping" class="task text-inputs">
-          <button class="edit btn">Save</button>
-          <button class="delete btn"><img src="./remove.svg" alt="remove-item"></button>
+          <button class="btn_edit btn">Save</button>
+          <button class="btn_delete btn"><img src="./remove.svg" alt="remove-item" class="btn__img_del"></button>
         </li>
       </ul>
 
@@ -48,8 +48,8 @@
           <input type="checkbox" checked class="checkbox">
           <label class="lbl task">See the Doctor</label>
           <input type="text" class="task text-inputs">
-          <button class="edit btn">Edit</button>
-          <button class="delete btn"><img src="./remove.svg" alt="remove-item"></button>
+          <button class="btn_edit btn">Edit</button>
+          <button class="btn_delete btn"><img src="./remove.svg" alt="remove-item" class="btn__img_del"></button>
         </li>
       </ul>
 
